--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item">
-                        <a href="" class="nav-link">Hom</a>
+                        <a href="" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
                         <a href="" class="nav-link">Products</a>
