--- a/index.html
+++ b/index.html
@@ -250,6 +250,20 @@
 
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-left">
+                <a href="/" class="footer-logo">
+                    <img src="img/Logo.svg" alt="" class="footer-logo-img">
+                </a>
+                <small></small>
+            </div>
+            <div class="footer-right">
+                 
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
