--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="/img/Logo.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lionic Legal Solution</title>
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
