make formating for header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
             <a href="/" class="logo">
                 <img src="img/Logo.svg" alt="" class="logo-img">
             </a>
@@ -39,7 +39,7 @@
                     </li>
                 </ul>
             </nav>
-            <a href="/" class="btn">
+            <a href="/" class="btn header-btn">
                 FREE TRIAL
             </a>
         </div>
@@ -299,14 +299,14 @@
                     <li class="footer-social-item">
                         <a href="" class="foote.social-link">
                             <span class="footer-social-icon">
-                                
+
                             </span>
                         </a>
                     </li>
                     <li class="footer-social-item">
                         <a href="" class="foote.social-link">
                             <span class="footer-social-icon">
-                                
+
                             </span>
                         </a>
                     </li>
