--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
         <section class="section-do">
             <div class="container">
-                <h2 class="section-heading">
+                <h2 class="section-heading text-center">
                     What We Do
                 </h2>
-                <p class="section-description">
+                <p class="section-description text-center">
                     Lionic guides you on making decisions for all aspects of your end-of-life plans.
                 </p>
                 <ul class="section-do-list">
@@ -215,14 +215,14 @@
                 </h2>
                 <ul class="section-contacts-list">
                     <li class="section-contacts-item">
-                        <span class="section-contacts-icon"></span>
+                        <span class="section-contacts-icon section-contacts-icon-gps"></span>
                         <strong class="section-contacts-heading">Visit Us</strong>
                         <div class="section-contacts-info">
                             Duis autem vel eum iriure dolor in hendrerit in vulputate velit.
                         </div>
                     </li>
                     <li class="section-contacts-item">
-                        <span class="section-contacts-icon"></span>
+                        <span class="section-contacts-icon section-contacts-icon-phone"></span>
                         <strong class="section-contacts-heading">Call Us</strong>
                         <div class="section-contacts-info">
                             <a class="section-contacts-info" href="tel:+7(987)654-32-10">
@@ -235,7 +235,7 @@
                         </div>
                     </li>
                     <li class="section-contacts-item">
-                        <span class="section-contacts-icon"></span>
+                        <span class="section-contacts-icon section-contacts-icon-mail"></span>
                         <strong class="section-contacts-heading">Email Us</strong>
                         <div class="section-contacts-info">
                             <a class="section-contacts-info" href="mailto:example@example.com">
