--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <div class="footer-left">
                 <a href="/" class="footer-logo">
                     <img src="img/Logo.svg" alt="" class="footer-logo-img">
@@ -265,7 +265,7 @@
             </div>
             <div class="footer-right">
                 <nav class="footer-nav">
-                    <ul class="footer-list">
+                    <ul class="footer-nav-list">
                         <li class="footer-nav-item">
                             <a href="" class="footer-nav-link">
                                 About Us
