--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </a>
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item">
+                    <li class="nav-item is-active">
                         <a href="" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
@@ -47,20 +47,24 @@
 
     <main>
         <section class="section-hero">
-            <div class="container">
-                <h1 class="section-hero-headindg">
-                    This is simply a smarter way to make your legal online
-                </h1>
-                <p class="selection-hero-description">
-                    Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                    laoreet dolore.
-                </p>
-                <a href="" class="btn">
-                    FREE 30 DAYS TRIAL
-                </a>
-                <div class="selection-hero-btn-description">
-                    <span class="section-hero-ssl-icon"></span>
-                    SSL SECURED CONNECTED
+            <div class="container hero-container">
+                <div class="hero-content">
+                    <h1 class="section-hero-headindg">
+                        This is simply a smarter way to make your legal online
+                    </h1>
+                    <p class="selection-hero-description">
+                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
+                        laoreet dolore.
+                    </p>
+                    <div class="section-hero-action">
+                        <a href="" class="btn btn-big section-hero-btn">
+                            FREE 30 DAYS TRIAL
+                        </a>
+                        <div class="selection-hero-btn-description">
+                            <span class="section-hero-ssl-icon"></span>
+                            SSL SECURED CONNECTED
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
