--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </p>
                 <ul class="section-do-list">
                     <li class="section-do-item">
-                        <svg class=:section-do-icon xmlns="http://www.w3.org/2000/svg" width="68" height="66"
+                        <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg" width="68" height="66"
                             viewBox="0 0 68 66">
                             <defs>
                                 <style>
@@ -99,7 +99,7 @@
                         </p>
                     </li>
                     <li class="section-do-item">
-                        <svg class=:section-do-icon xmlns="http://www.w3.org/2000/svg" width="86" height="64"
+                        <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg" width="86" height="64"
                             viewBox="0 0 86 64">
                             <defs>
                                 <style>
@@ -119,7 +119,7 @@
                         </p>
                     </li>
                     <li class="section-do-item">
-                        <svg class=:section-do-icon xmlns="http://www.w3.org/2000/svg" width="64" height="64"
+                        <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg" width="64" height="64"
                             viewBox="0 0 64 64">
                             <defs>
                                 <style>
@@ -139,7 +139,7 @@
                         </p>
                     </li>
                     <li class="section-do-item">
-                        <svg class=:section-do-icon xmlns="http://www.w3.org/2000/svg" width="65" height="65"
+                        <svg class="section-do-icon" xmlns="http://www.w3.org/2000/svg" width="65" height="65"
                             viewBox="0 0 65 65">
                             <defs>
                                 <style>
@@ -164,7 +164,7 @@
 
         <section class="section-clients">
             <div class="container">
-                <h2 class="section-heading">Our Happy Clients</h2>
+                <h2 class="section-heading section-clients-heading">Our Happy Clients</h2>
                 <ul class="section-clients-list">
                     <li class="section-clients-list-item">
                         <div class="section-clients-testimonial">
