add input-form (finished this project)

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         <section class="section-contacts">
             <div class="container">
-                <h2 class="section-heading">
+                <h2 class="section-heading section-contacts-heading-h2">
                     Contacts
                 </h2>
                 <ul class="section-contacts-list">
@@ -255,6 +255,26 @@
             </div>
 
         </section>
+
+        <section class="section-form">
+            <div class="container form-container">
+                <h2 class="section-title form-title text-center">
+                    What Are You Waiting For?
+                </h2>
+                <p class="form-description text-center">
+                    Take control of your paid subscriptions today!
+                </p>
+                <form action="https://jsonplaceholder.typicode.com" autocomplte method="post" class="form text-center">
+                    <input minlength="5" maxlength="16" required type="text" name="name" placeholder="Name" value=""
+                        class="input" id="name">
+                    <input required type="email" name="email" placeholder="E-mail" class="input">
+                    <input required type="tel" name="phone" placeholder="Phone" class="input">
+                    <button type="submit" class="btn btn-submit">
+                        Get stated
+                    </button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
@@ -294,23 +314,20 @@
                 </nav>
                 <ul class="footer-social-list">
                     <li class="footer-social-item">
-                        <a href="" class="foote.social-link">
-                            <span class="footer-social-icon">
-
+                        <a href="" class="footer.social-link">
+                            <span class="footer-social-icon footer-social-icon-twitter">
                             </span>
                         </a>
                     </li>
                     <li class="footer-social-item">
-                        <a href="" class="foote.social-link">
-                            <span class="footer-social-icon">
-
+                        <a href="" class="footer.social-link">
+                            <span class="footer-social-icon footer-social-icon-linkedin">
                             </span>
                         </a>
                     </li>
                     <li class="footer-social-item">
-                        <a href="" class="foote.social-link">
-                            <span class="footer-social-icon">
-
+                        <a href="" class="footer.social-link">
+                            <span class="footer-social-icon footer-social-icon-mail">
                             </span>
                         </a>
                     </li>
